--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "scripts": {
     "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "lint:html": "htmlhint *.html",
+    "prepare": "husky"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "htmlhint": "^1.9.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0"
+  },
+  "lint-staged": {
+    "*.html": "htmlhint"
   }
 }
