--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
     "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "lint:html": "htmlhint *.html",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -11,9 +13,14 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "postcss": "^8.4.31",
+    "prettier": "^3.8.1",
     "tailwindcss": "^3.3.0"
   },
   "lint-staged": {
-    "*.html": "htmlhint"
+    "*.html": [
+      "htmlhint",
+      "prettier --write"
+    ],
+    "*.{js,json,css,md}": "prettier --write"
   }
 }
