--- a/package.json
+++ b/package.json
@@ -3,22 +3,35 @@
     "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
     "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "lint:html": "htmlhint *.html",
+    "lint:ts": "eslint . --ext .ts,.tsx",
+    "lint": "npm run lint:html && npm run lint:ts",
+    "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky"
   },
   "devDependencies": {
+    "@types/chrome": "^0.1.37",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
     "autoprefixer": "^10.4.14",
+    "eslint": "^10.0.2",
+    "eslint-config-prettier": "^10.1.8",
     "htmlhint": "^1.9.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "postcss": "^8.4.31",
     "prettier": "^3.8.1",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.9.3"
   },
   "lint-staged": {
     "*.html": [
       "htmlhint",
+      "prettier --write"
+    ],
+    "*.{ts,tsx}": [
+      "eslint --fix",
       "prettier --write"
     ],
     "*.{js,json,css,md}": "prettier --write"
