--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "scripts": {
+    "build:js": "esbuild src/index.tsx --bundle --outfile=dist/popup.js --format=iife",
     "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "build": "npm run build:js && npm run build:css",
+    "watch:js": "esbuild src/index.tsx --bundle --outfile=dist/popup.js --format=iife --watch",
     "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "watch": "npm run watch:js & npm run watch:css",
     "lint:html": "htmlhint *.html",
     "lint:ts": "eslint . --ext .ts,.tsx",
     "lint": "npm run lint:html && npm run lint:ts",
@@ -12,9 +16,12 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.1.37",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.56.1",
     "@typescript-eslint/parser": "^8.56.1",
     "autoprefixer": "^10.4.14",
+    "esbuild": "^0.27.3",
     "eslint": "^10.0.2",
     "eslint-config-prettier": "^10.1.8",
     "htmlhint": "^1.9.1",
@@ -35,5 +42,9 @@
       "prettier --write"
     ],
     "*.{js,json,css,md}": "prettier --write"
+  },
+  "dependencies": {
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   }
 }
